docs/api/qiskit/0.43/qiskit.transpiler.passes.NoiseAdaptiveLayout.mdx
---
title: NoiseAdaptiveLayout
description: API reference for qiskit.transpiler.passes.NoiseAdaptiveLayout
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.NoiseAdaptiveLayout
---

# NoiseAdaptiveLayout

<Class id="qiskit.transpiler.passes.NoiseAdaptiveLayout" github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/layout/noise_adaptive_layout.py" signature="NoiseAdaptiveLayout(*args, **kwargs)">
  Bases: [`AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

  Choose a noise-adaptive Layout based on current calibration data for the backend.

  > This pass associates a physical qubit (int) to each virtual qubit of the circuit (Qubit), using calibration data.
  >
  > The pass implements the qubit mapping method from: Noise-Adaptive Compiler Mappings for Noisy Intermediate-Scale Quantum Computers Prakash Murali, Jonathan M. Baker, Ali Javadi-Abhari, Frederic T. Chong, Margaret R. Martonosi ASPLOS 2019 (arXiv:1901.11054).

  <Function id="" signature="Ordering of edges" />

  <Function id="" signature="Map qubits edge-by-edge in the order of decreasing frequency of occurrence in the program dag." />

  ### Initialization

  <Function id="qiskit.transpiler.passes.NoiseAdaptiveLayout.Initialization" name="Initialization" signature="Initialization()" />

  <Function id="" signature="If an edge exists with both endpoints unmapped," />

  <Function id="" signature="pick the best available hardware cx to execute this edge." />

  <Function id="" signature="Iterative step" />

  <Function id="" signature="When an edge exists with one endpoint unmapped," />

  <Function id="" signature="map that endpoint to a location which allows" />

  <Function id="" signature="maximum reliability for CNOTs with previously mapped qubits." />

  <Function id="" signature="In the end if there are unmapped qubits (which don't" />

  <Function id="" signature="participate in any CNOT), map them to any available" />

  <Function id="" signature="hardware qubit." />

  ### Notes

  <Function id="qiskit.transpiler.passes.NoiseAdaptiveLayout.Notes" name="Notes" signature="Notes()">
    even though a layout is not strictly a property of the DAG, in the transpiler architecture it is best passed around between passes by being set in property\_set.
  </Function>

  NoiseAdaptiveLayout initializer.

  **Parameters**

  **backend\_prop** (*Union\[*[*BackendProperties*](qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")*,* [*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")*]*) – backend properties object

  **Raises**

  [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if invalid options

  ## Methods

  <span id="qiskit-transpiler-passes-noiseadaptivelayout-name" />

  ### name

  <Function id="qiskit.transpiler.passes.NoiseAdaptiveLayout.name" signature="NoiseAdaptiveLayout.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-noiseadaptivelayout-run" />

  ### run

  <Function id="qiskit.transpiler.passes.NoiseAdaptiveLayout.run" signature="NoiseAdaptiveLayout.run(dag)">
    Run the NoiseAdaptiveLayout pass on dag.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.NoiseAdaptiveLayout.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.NoiseAdaptiveLayout.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

